TICKET_PORTAL#3 - remove customer reference
