# services/java/ticket-order-api/src/main/java/com/example/ticketplatform/api/domain/model/event/BookedPlace.java
@@ -9,7 +9,6 @@ public record BookedPlace(
     UUID id,
     UUID eventId,
     UUID customerId,
-    UUID customerReference,
     Integer rowNumber,
     Integer placeNumber,
     String placeType,
